ui: replace fit-scale-icon, fix alignment on Chrome

--- a/app/assets/stylesheets/modules/heatmap-button.css.scss
+++ b/app/assets/stylesheets/modules/heatmap-button.css.scss
@@ -14,6 +14,15 @@
     margin-left: 20px;
   }
 
+  img {
+    height: 25px;
+    width: 11px;
+
+    &.fit-scale-icon {
+      width: 16px;
+    }
+  }
+
   @media screen and (max-width: $mobile) {
     display: none;
   }
